# personal-projects

./: LICENSE  Makefile  README.md  pyproject.toml  pyproject.txt
src/: config.py  dataset.py
